Changes in aside shadow, and article and section

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -249,4 +249,4 @@ div.pulltorefresh
 
 @media screen and (min-width : 768px) and (orientation : landscape)
   aside
-    box-shadow inset -4px -8px 3px 1px darken(SECONDARY, 50%)
+    box-shadow inset -4px -8px 3px 1px darken(SECONDARY, 50%)!important
