--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -641,5 +641,5 @@ header > nav:not(.right):not(.left){position:relative;top:-53px}
 header > nav button,header > nav .button{position:static}
 article{position:static;top:0;overflow-y:scroll;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;-webkit-box-ordinal-group:2;-moz-box-ordinal-group:2;-ms-box-ordinal-group:2;-o-box-ordinal-group:2;box-ordinal-group:2}
 footer{position:static;-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;-webkit-box-ordinal-group:3;-moz-box-ordinal-group:3;-ms-box-ordinal-group:3;-o-box-ordinal-group:3;box-ordinal-group:3}
-[data-action=aside]{display:none}
+[data-action=aside]{display:none !important}
 }
