--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -125,6 +125,8 @@ header
           width 100%
           display block
           height HEADER_HEIGHT
+          font-size 1em!important
+          margin-top 0!important
 
         & .icon
           font-size 1em
