Changes in icons

--- a/stylesheets/TaKo.icons.styl
+++ b/stylesheets/TaKo.icons.styl
@@ -73,10 +73,10 @@
   &.camera
     &:before
       content '\e838'
-  &.th-large
+  &.grid-large
     &:before
       content '\e854'
-  &.th
+  &.grid
     &:before
       content '\e855'
   &.th-list
