--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -132,12 +132,12 @@ aside ul
         top 10px
 
       &.big
-        width LIST_BIG_IMAGE
-        height LIST_BIG_IMAGE
+        width 56px
+        height 56px
         margin-right .7em
-        margin-left -.9em
-        margin-top -.9em
-        margin-bottom -.9em
+        margin-left -.6em
+        margin-top -.5em
+        margin-bottom -.6em
 
 
       &.small
