--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -85,7 +85,7 @@
       &.left
         position relative
         z-index HEADER_NAV_INDEX
-        float right
+        float left
 
         & > button
           margin-left 5px
