Fixed tablet section position

--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -12,7 +12,7 @@
 
   div[data-element="aside_background"]
     display block
-    width ASIDE_WIDTH + ASIDE_PADDING * 2!important
+    width ASIDE_WIDTH!important
     z-index ASIDE_BCK_INDEX
     height 100%
     box-flex 0
@@ -30,7 +30,7 @@
 
   section.active
     position static
-    margin-left ASIDE_WIDTH + ASIDE_PADDING * 2!important
+    margin-left ASIDE_WIDTH!important
     box-flex 1
     height 100%
 
