--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -160,7 +160,9 @@ div[data-element="notification"]
         width 150px!important
         height 150px!important
         max-height 150px!important
+
         & > article
+          overflow hidden
           width 150px!important
           height 150px!important
           max-height 150px!important
