Another fixing for firefox

--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -156,7 +156,9 @@ div[data-element="notification"]
       padding-top 0.5em
 
     &.loading, &.progress
+      min-width 250px
       &.squared
+        min-width 150px
         width 150px!important
         height 150px!important
         max-height 150px!important
@@ -187,6 +189,7 @@ div[data-element="notification"]
         line-height 100px
         width 100%
         text-align center
+        overflow hidden
 
         & .icon
           font-size 5em
