--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -94,16 +94,16 @@ body, html
   line-height 100%
 
 .align-left
-  text-align left
+  text-align left!important
 
 .align-center
-  text-align center
+  text-align center!important
 
 .align-right
-  text-align right
+  text-align right!important
 
 .align-justify
-  text-align justify
+  text-align justify!important
 
 .scroll
 
