--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -157,31 +157,28 @@ div[data-element="notification"]
 
     &.loading, &.progress
       min-width 250px
-      &.squared
-        min-width 150px
-        width 150px!important
-        height 150px!important
-        max-height 150px!important
-
-        & > article
-          overflow hidden
-          width 150px!important
-          height 150px!important
-          max-height 150px!important
-
-        & .icon
-          margin-top 0
-          font-size 7em
-          width 150px
-          height 150px
-          line-height 150px
-          margin-left auto
-          margin-right auto
 
       & > header
         font-weight bold
         font-size 1.3em
-        text-align center!important
+
+        & > .icon
+          font-size 2em
+          display inline-block
+          height 50px
+          width 50px
+          line-height 49px
+          margin-left 10px
+          margin-right 10px
+
+          & + span
+            position relative
+            top -6px
+        & span:nth-child(1)
+          &:not(.icon)
+            display inline-block
+            width 100%
+            text-align center
 
       & > article
         display block
@@ -201,3 +198,32 @@ div[data-element="notification"]
           margin-top .15em
           margin-left auto
           margin-right auto
+
+    &.loading
+      & > header
+        text-align center!important
+
+      &.squared
+        min-width 150px
+        width 150px!important
+        height 150px!important
+        max-height 145px!important
+
+        & > article
+          overflow hidden
+          width 150px!important
+          height 150px!important
+          max-height 150px!important
+
+        & .icon
+          margin-top 0
+          font-size 7em
+          width 150px
+          height 150px
+          line-height 150px
+          margin-left auto
+          margin-right auto
+
+      & > article
+        & .icon
+          line-height 96px
