--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -199,6 +199,14 @@ div[data-element="notification"]
           margin-left auto
           margin-right auto
 
+        & #notification_progress
+          height 10px
+          position relative
+          bottom 15px
+          width 90%
+          margin-left auto
+          margin-right auto
+
     &.loading
       & > header
         text-align center!important
@@ -227,3 +235,6 @@ div[data-element="notification"]
       & > article
         & .icon
           line-height 96px
+    &.progress
+      & > article
+        height 150px
