--- a/stylesheets/TaKo.colors.styl
+++ b/stylesheets/TaKo.colors.styl
@@ -12,6 +12,7 @@ ORANGE  = #ff5c11
 FIREFOX = #FF6600
 
 .blue
+  color #FFF !important
   background-color BLUE!important
   background-image -webkit-linear-gradient(lighten(BLUE, 15%), BLUE)!important
   background-image -moz-linear-gradient(lighten(BLUE, 15%), BLUE)!important
@@ -19,6 +20,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(BLUE, 15%), BLUE)!important
   background-image linear-gradient(lighten(BLUE, 15%), BLUE)!important
 .red
+  color #FFF !important
   background-color RED!important
   background-image -webkit-linear-gradient(lighten(RED, 15%), RED)!important
   background-image -moz-linear-gradient(lighten(RED, 15%), RED)!important
@@ -26,6 +28,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(RED, 15%), RED)!important
   background-image linear-gradient(lighten(RED, 15%), RED)!important
 .yellow
+  color #FFF !important
   background-color YELLOW!important
   background-image -webkit-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
   background-image -moz-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
@@ -33,6 +36,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
   background-image linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
 .black
+  color #FFF !important
   background-color BLACK!important
   background-image -webkit-linear-gradient(lighten(BLACK, 15%), BLACK)!important
   background-image -moz-linear-gradient(lighten(BLACK, 15%), BLACK)!important
@@ -40,6 +44,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(BLACK, 15%), BLACK)!important
   background-image linear-gradient(lighten(BLACK, 15%), BLACK)!important
 .white
+  color #000!important
   background-color WHITE!important
   background-image -webkit-linear-gradient(lighten(WHITE, 15%), WHITE)!important
   background-image -moz-linear-gradient(lighten(WHITE, 15%), WHITE)!important
@@ -47,6 +52,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(WHITE, 15%), WHITE)!important
   background-image linear-gradient(lighten(WHITE, 15%), WHITE)!important
 .grey
+  color #FFF !important
   background-color GREY!important
   background-image -webkit-linear-gradient(lighten(GREY, 15%), GREY)!important
   background-image -moz-linear-gradient(lighten(GREY, 15%), GREY)!important
@@ -54,6 +60,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(GREY, 15%), GREY)!important
   background-image linear-gradient(lighten(GREY, 15%), GREY)!important
 .green
+  color #FFF !important
   background-color GREEN!important
   background-image -webkit-linear-gradient(lighten(GREEN, 15%), GREEN)!important
   background-image -moz-linear-gradient(lighten(GREEN, 15%), GREEN)!important
@@ -61,6 +68,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(GREEN, 15%), GREEN)!important
   background-image linear-gradient(lighten(GREEN, 15%), GREEN)!important
 .pink
+  color #FFF !important
   background-color PINK!important
   background-image -webkit-linear-gradient(lighten(PINK, 15%), PINK)!important
   background-image -moz-linear-gradient(lighten(PINK, 15%), PINK)!important
@@ -68,6 +76,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(PINK, 15%), PINK)!important
   background-image linear-gradient(lighten(PINK, 15%), PINK)!important
 .purple
+  color #FFF !important
   background-color PURPLE!important
   background-image -webkit-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
   background-image -moz-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
@@ -75,6 +84,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
   background-image linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
 .brown
+  color #FFF !important
   background-color BROWN!important
   background-image -webkit-linear-gradient(lighten(BROWN, 15%), BROWN)!important
   background-image -moz-linear-gradient(lighten(BROWN, 15%), BROWN)!important
@@ -82,6 +92,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(BROWN, 15%), BROWN)!important
   background-image linear-gradient(lighten(BROWN, 15%), BROWN)!important
 .orange
+  color #FFF !important
   background-color ORANGE!important
   background-image -webkit-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
   background-image -moz-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
@@ -89,6 +100,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
   background-image linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
 .firefox
+  color #FFF !important
   background-color FIREFOX!important
   background-image -webkit-linear-gradient(lighten(FIREFOX, 15%), FIREFOX)!important
   background-image -moz-linear-gradient(lighten(FIREFOX, 15%), FIREFOX)!important
