--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -94,6 +94,11 @@ article ul
     & [type="range"]
       width 100%
 
+    & button, & .button
+      &.anchor
+        padding-left 0
+        padding-right 0
+
   &.indented > li
     margin INDENT
 
