--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -58,6 +58,11 @@ button, .button
       &+span
         font-size FONT_SIZE_BIGGEST
 
+  &.wide
+    &.icon:before
+      position absolute
+      left 12px
+
   &.icon:before, & .icon
     font-size 1.5em
 
