--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -116,7 +116,7 @@ button, .button
     background-image -ms-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
     background-image -o-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
     background-image linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
-    color SECONDARY_TEXT
+    color #FFF
 
   &.cancel
     background-color lighten(FAIL, 15%)
@@ -125,7 +125,7 @@ button, .button
     background-image -ms-linear-gradient(lighten(FAIL, 15%), FAIL)
     background-image -o-linear-gradient(lighten(FAIL, 15%), FAIL)
     background-image linear-gradient(lighten(FAIL, 15%), FAIL)
-    color SECONDARY_TEXT
+    color #FFF
 
 aside .current, footer .current
   background-color SECONDARY_ACTIVE
