--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -5,7 +5,7 @@
 body,html{padding:0;margin:0;width:100%;height:100%;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;oveflow:hidden;-webkit-backface-visibility:hidden;}
 body *,html *{-webkit-tap-highlight-color:rgba(0,0,0,0)}
 .indented > *{padding:.8em}
-.anchor{width:100% !important}
+.wide{width:100% !important}
 .smallest{font-size:11px}
 .small{font-size:.9em}
 .big{font-size:1.2em}
@@ -206,6 +206,7 @@ button.big>img+span,.button.big>img+span{font-size:1.2em}
 button.biggest,.button.biggest{line-height:3em;}
 button.biggest>img,.button.biggest>img{height:2.3em;top:8px;}
 button.biggest>img+span,.button.biggest>img+span{font-size:1.4em}
+button.wide.icon:before,.button.wide.icon:before{position:absolute;left:12px}
 button.icon:before,.button.icon:before,button .icon,.button .icon{font-size:1.5em}
 button.icon:before,.button.icon:before{margin-right:.5em}
 button.icon:empty:before,.button.icon:empty:before{margin-right:-1px}
