--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -216,12 +216,14 @@ div[data-element="notification"]
         width 150px!important
         height 150px!important
         max-height 145px!important
+        background none
 
         & > article
           overflow hidden
           width 150px!important
           height 150px!important
           max-height 150px!important
+          background none
 
         & .icon
           margin-top 0
