--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -154,7 +154,8 @@ fieldset
   width 100%
   display block
   box-sizing border-box
-
+  margin-left 0
+  margin-right 0
   & label:not(.select)
     line-height 32px
     height 32px
