Fixed tablet flexbox, and wide iconned button

--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -59,6 +59,8 @@ button, .button
         font-size FONT_SIZE_BIGGEST
 
   &.wide
+    position relative
+
     &.icon:before
       position absolute
       left 12px
