--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -11,11 +11,13 @@
     box-pack justify
 
   div[data-element="aside_background"]
+    position static
     display block
     width ASIDE_WIDTH + ASIDE_PADDING!important
     z-index ASIDE_BCK_INDEX
     height 100%
     box-flex 0
+    ordinal-group(1)
     top 0
 
   aside
@@ -31,8 +33,8 @@
 
   section.active
     position static
-    margin-left ASIDE_WIDTH + ASIDE_PADDING!important
     box-flex 1
+    ordinal-group(2)
     height 100%
 
     display -webkit-box
