--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -247,4 +247,4 @@ div.pulltorefresh
 
 @media screen and (min-width : 768px) and (orientation : landscape)
   aside
-    box-shadow inset -4px -8px 3px 1px darken(SECONDARY, 50%)!important
+    box-shadow inset -4px 0 3px 1px darken(SECONDARY, 50%)!important
