--- a/stylesheets/Tako.aside.styl
+++ b/stylesheets/Tako.aside.styl
@@ -28,6 +28,7 @@ div[data-element="aside_background"]
   left 0
   width 100%
   height 100%
+  min-height 1500px
   z-index 0
   background-color rgba(0, 0, 0, 0)
   transition(background-color ASIDE_TRANSITION_TIME linear)
