fixing for a.wide.button

--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -89,6 +89,13 @@ button, .button
         top 0
         margin-left .4em!important
 
+a.button
+  &.wide
+    padding-left 0
+    padding-right 0
+    padding-top 3px
+    padding-bottom 2px
+
 header
   :not(.button)
     padding-top 0
