--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -16,6 +16,7 @@
     width ASIDE_WIDTH + ASIDE_PADDING!important
     z-index ASIDE_BCK_INDEX
     height 100%
+    min-height 99%
     box-flex 0
     ordinal-group(1)
     top 0
@@ -48,13 +49,14 @@
     box-pack justify
 
     &.footer > article
-      padding-bottom 0!important
+      padding-bottom 2px!important
 
     &.extended_header > article
       margin-top HEADER_HEIGHT
 
   header
-    position static
+    position relative
+    top 0
     box-flex 0
     margin 0
     text-align left
@@ -103,13 +105,14 @@
 
   article
     position static
-    top 0
+    height inherit
     overflow-y scroll
     box-flex 1
     ordinal-group(2)
 
   footer
-    position static
+    position relative
+    bottom 2px
     box-flex 0
     ordinal-group(3)
 
