Fixings in a.button

--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -29,16 +29,16 @@ body, html
   width 100%!important
 
 .smallest
-  font-size FONT_SIZE_SMALLEST
+  font-size FONT_SIZE_SMALLEST !important
 
 .small
-  font-size FONT_SIZE_SMALL
+  font-size FONT_SIZE_SMALL !important
 
 .big
-  font-size FONT_SIZE_BIG
+  font-size FONT_SIZE_BIG !important
 
 .biggest
-  font-size FONT_SIZE_BIGGEST
+  font-size FONT_SIZE_BIGGEST !important
 
 .onleft
   float left
