--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -6,10 +6,10 @@ body,html{padding:0;margin:0;width:100%;height:100%;-webkit-touch-callout:none;-
 body *,html *{-webkit-tap-highlight-color:rgba(0,0,0,0)}
 .indented > *{padding:.8em}
 .wide{width:100% !important}
-.smallest{font-size:11px}
-.small{font-size:.9em}
-.big{font-size:1.2em}
-.biggest{font-size:1.4em}
+.smallest{font-size:11px !important}
+.small{font-size:.9em !important}
+.big{font-size:1.2em !important}
+.biggest{font-size:1.4em !important}
 .onleft{float:left}
 .onright{float:right}
 .clear:after{display:block;content:"";clear:both}
