--- a/stylesheets/TaKo.buttons.styl
+++ b/stylesheets/TaKo.buttons.styl
@@ -11,6 +11,8 @@ button, .button
   padding-right 1em
   overflow hidden
   white-space nowrap
+  padding-top 2px
+  padding-bottom 3px
 
   &:hover
     box-shadow inset 0 0 5em rgba(0,0,0,0.1), inset 0 1px rgba(0,0,0,0.1)!important
